--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cross-env": "^5.2.0",
+    "curl": "^0.1.4",
     "express": "^4.16.4",
-    "morgan": "^1.9.1"
+    "jq": "^1.7.2",
+    "morgan": "^1.9.1",
+    "pathfinding": "^0.4.18"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
